# zframe

./: CMakeLists.txt  build_vs.bat  build_vs_2022.bat  build_vs_debug.bat  distribute.sh  make.sh  make_debug.sh  pull_vender.sh
cmake/: macro.cmake  option.cmake
include/zbase/: README.md  VERSION  zallocator.h  zarray.h  zbitset.h  zbuddy.h  zclock.h  zfile.h  zfile_mapping.h  zforeach.h  zhash_map.h  zlist.h  zlist_ext.h  zmalloc.h  zmem_color.h  zmem_pool.h  zshm_boot.h  zshm_loader.h  zshm_ptr.h  zsingle.h  zstream.h  zsymbols.h  zvector.h
src/resume_frame/: base_frame.cpp  base_frame.h  boot_frame.cpp  boot_frame.h  frame_boot.h  frame_def.h  frame_option.h  object_pool_frame.h  object_pool_helper.cpp  object_pool_helper.h  pool_foreach.h  pool_helper.h
tests/base_test/: base_test.cpp
tests/common/: test_common.h  ztest.h
vender/include/zbase/: VERSION  zallocator.h  zarray.h  zbuddy.h  zfile_mapping.h  zlist.h  zlist_ext.h  zmalloc.h  zshm_loader.h
vender/zbase/include/zbase/: README.md  VERSION  zallocator.h  zarray.h  zbitset.h  zbuddy.h  zclock.h  zfile.h  zfile_mapping.h  zforeach.h  zlist.h  zlist_ext.h  zmalloc.h  zmem_color.h  zmem_pool.h  zpool.h  zshm_boot.h  zshm_loader.h  zshm_ptr.h  zsingle.h  zstream.h  zsymbols.h  ztest.h  zvector.h
